[package]
name = "trusty-diag"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
fern = "0.5.9"
log = "0.4.8"
structopt = "0.3.9"
tokio = "0.2.13"
trust-dns-client = { version = "0.19.3", features = ["dnssec-ring"] }
trust-dns-proto = { version = "0.19.3", features = ["dnssec-ring"] }
trust-dns-resolver = { version = "0.19.3", features = ["dnssec-ring"] }
